--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <!-- <img src="https://cdn.freecodecamp.org/curriculum/css-box-model/diagram-1.png" alt="">
     <img src="https://cdn.freecodecamp.org/curriculum/css-box-model/diagram-2.png" alt="">
     <img src="https://cdn.freecodecamp.org/curriculum/css-box-model/diagram-3.png" alt=""> -->
-
-    <div class="canvas">
-
+    <div class="frame">
+        <div class="canvas">
+            <div class="one"></div>
+            <div class="two"></div>
+            <div class="three"></div>
+        </div>
     </div>
 </body>
 </html>
